--- a/src/style.css
+++ b/src/style.css
@@ -4,8 +4,8 @@
 }
 
 body {
-  background-color: #81a69b;
-  background-image: url(http://pets-images.dev-apis.com/pets/wallpaperB.jpg);
+  background-color: #81a69b;  
+  background-image: url(http://pets-images.dev-apis.com/pets/wallpaperC.jpg);
   margin: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
